# wordnet-angular

./: .gitignore  Cargo.toml  README.md  convert_oewn_to_ttl.sh  get-data.sh
src/: about.html  app.js  dump.rs  english-index.html  english-wordnet.html  english.css  glosstag.rs  index.html  license.html  links.rs  main.rs  omwn.rs  ontology.html  polyling-app.js  polyling-index.html  polyling-synset.html  polyling-wordnet.html  polylingwn.css  polylingwn.xcf  princeton.xcf  rdfxml.hbs  relation.html  synset.html  ttl-dump.hbs  ttl.hbs  wn.css  wordnet.html  wordnet.rs  wordnet_model.rs  wordnet_read.rs  xml-english.hbs  xml-poly.hbs  xml.hbs
src/res/: fonts.css
wordnet-vue/: README.md  package-lock.json  package.json
wordnet-vue/src/: App.vue
wordnet-vue/src/components/: WordNet.vue
