[package]
name = "wordnet-angular"
version = "0.1.0"
authors = ["John McCrae <john@mccr.ae>"]
edition = "2021"

[[bin]]
name = "wordnet-angular"
path = "src/main.rs"

[[bin]]
name = "wordnet-rdf-dump"
path = "src/dump.rs"

[dependencies]
stable-skiplist = "0.1.1"
xml-rs = "0.6"
quick-error = "1.2.3"
clap = "2.26.1"
serde = "*"
serde_json = "*"
serde_derive = "*"
handlebars = "0.29.1"
rusqlite = "0.20.0"
rocket = "0.5.1"
once_cell = "1.20.2"
